# DjangoBazaar

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
apps/core/: admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/core/faker/: user_faker.py
apps/core/managers/: user_manager.py
apps/core/models/: image.py  mixin.py  user.py
apps/core/serializers/: timestamped_serializer.py  user_serializer.py
apps/core/services/: time_service.py  token_service.py
apps/core/tests/: base_test.py  image_mixin.py  mixin.py  test_create_user.py  test_user.py  test_user_activation.py  test_user_change_email.py  test_user_rest_password.py
apps/core/urls/: accounts_urls.py
apps/shop/: apps.py  models.py  paginations.py  urls.py  views.py
apps/shop/faker/: product_faker.py
apps/shop/filters/: option_filter.py  product_filter.py
apps/shop/managers/: product_manager.py
apps/shop/models/: __init__.py  attribute.py  cart.py  category.py  option.py  order.py  product.py  review.py
apps/shop/serializers/: attribute_serializers.py  cart_serializers.py  category_serializers.py  option_serializers.py  product_serializer.py  product_serializers.py  review_serializers.py
apps/shop/services/: option_service.py  product_service.py
apps/shop/urls/: attributes_urls.py  carts_urls.py  categories_urls.py  options_urls.py  product_url.py  products_urls.py  shop_url.py  (+1 more)
backups/migrations_table/: 0001_backup_migrations_table.json
config/: env_loader.py  settings.py  urls.py
(+116 files in other folders)
