[tool.poetry]
name = "djangobazaar"
version = "0.1.0"
description = ""
authors = ["AminZamani <aminzamani.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-nested-routers = "^0.94.1"
drf-spectacular = "^0.28.0"
django-environ = "^0.11.2"
django-filter = "^24.3"
django-cors-headers = "^4.6.0"
django-debug-toolbar = "^4.4.6"
daphne = "^4.1.2"
pillow = "^11.0.0"
faker = "^33.1.0"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
pyotp = "^2.9.0"
factory-boy = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
